2006-07-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* TODO:
	  add some TODO notes
	* flumotion/admin/gtk/client.py:
	  log the component view we have a warning on
	* flumotion/component/base/admin_gtk.py:
	  fix inconsistent arg name

2006-07-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* data/glade/admin.glade:
	  set border_width on VPane, and then remove the unneeded HBox
	  that was used for padding
	* flumotion/admin/gtk/client.py:
	  create _component_view_set_widget() and use it

2006-07-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* data/glade/admin.glade:
	  Change the window's size to not be minimum width and height,
	  but default.  Also make it slightly bigger.
	  create a VPaned to separate the messages view from the rest,
	  so that it can be resized as needed.
	  Adjust padding so that the textview lines up with the notebook
	  and componentsview
	  put the label inside a component_view vbox of 1, so we can
	  later adjust the code to embed inside this vbox always
	* flumotion/admin/gtk/parts.py:
	  if no selection, do not traceback, just return None
	* flumotion/admin/gtk/client.py:
	  the widget we want is actually components_view - the view on the
	  left on all components
	  when we have a node render error, show a message
	  add 2006, we're living it
	  add other authors, they've earned it
	* flumotion/admin/gtk/message.py:
	  adjust padding to make text view and buttons line up

2006-07-05  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/feedcomponent010.py:
	  Assert that the pipeline is None before setting it. 
	  This triggers when restarting a manager; without the assert we end
	  up crashing in multifdsink.
	  Need to figure out why we're setting a replacement pipeline, but
	  this at least makes sure we get a clear assertion failure in python
	  rather than nasty segfaults.

2006-07-03  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/consumers/httpstreamer/http.py: